<resources>
    <string name="app_name">Redditop</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="retry">Retry</string>
    <string name="dismiss_all">Dismiss All</string>
    <string name="post_item_row_thumb">The post item row thumbnail image</string>
    <string name="post_item_row_read">The post item row read image</string>
    <string name="post_item_row_delete">The post item row delete image</string>
    <string name="post_detail_image">The post detail image</string>
    <string name="comments">%s Comments</string>

    //Created at
    <string name="days">%s Days ago</string>
    <string name="hours">%s Hours ago</string>
    <string name="minutes">%s Minutes ago</string>
    <string name="seconds">%s Seconds ago</string>

    //Image Download
    <string name="download_image_without_permissions">Image cannot be downloaded without permissions</string>
    <string name="image_downloaded">"Image downloaded"</string>
    <string name="image_downloaded_fails">Image cannot be downloaded</string>

</resources>